# SG-Service-Client

./: .gitreview  requirements.txt  setup.cfg  tox.ini
sgsclient/: __init__.py  base.py  client.py  exceptions.py  i18n.py  shell.py  shell_utils.py  utils.py  version.py
sgsclient/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
sgsclient/common/: base.py  http.py  utils.py
sgsclient/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
sgsclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
sgsclient/tests/unit/: test_sgsclient.py
sgsclient/tests/unit/v1/: fakes.py  test_replications.py
sgsclient/v1/: backups.py  checkpoints.py  client.py  replicates.py  replications.py  shell.py  snapshots.py  volumes.py
